# dtu_mlops

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: cml.yaml  codecheck.yml  tests.yml
data/: processed.dvc  raw.dvc
dtu_mlops_code/: __init__.py  predict_model.py  train_cml.py  train_model.py
dtu_mlops_code/conf/: training_conf.yaml
dtu_mlops_code/data/: __init__.py  make_dataset.py
dtu_mlops_code/models/: __init__.py  model.py
dtu_mlops_code/visualizations/: __init__.py  model.py  visualize.py
models/: trained_model.pt
s1/: data.py  main.py  model.py  trained_model.pt
tests/: test_data.py  test_model.py
